--- a/cpp/msbuild/zeroc.freeze.v140.targets
+++ b/cpp/msbuild/zeroc.freeze.v140.targets
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <PropertyGroup Condition="'$(PlatformToolset)' == 'v140'">
+        <IceConfiguration Condition="'$(UseDebugLibraries)' == 'true'">Debug</IceConfiguration>
+        <IceConfiguration Condition="'$(UseDebugLibraries)' != 'true'">Release</IceConfiguration>
+        <LocalDebuggerEnvironment Condition="$(LocalDebuggerEnvironment.Contains('PATH='))">$(LocalDebuggerEnvironment.Replace('PATH=', 'PATH=$(MSBuildThisFileDirectory)bin\$(Platform)\$(IceConfiguration);$(FreezeToolsPath);'))</LocalDebuggerEnvironment>
+        <LocalDebuggerEnvironment Condition="!$(LocalDebuggerEnvironment.Contains('PATH='))">
+    PATH=$(MSBuildThisFileDirectory)bin\$(Platform)\$(IceConfiguration);$(FreezeToolsPath);$(LocalDebuggerEnvironment)
+    $(LocalDebuggerEnvironment)</LocalDebuggerEnvironment>
+    </PropertyGroup>
     <ItemDefinitionGroup Condition="'$(PlatformToolset)' == 'v140'">
         <ClCompile>
             <AdditionalIncludeDirectories>$(MSBuildThisFileDirectory)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
