Build system fixes to not add -L/usr/lib when linking against system installed Ice bindist

--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,8 @@ IceBuilder.d
 .gradle
 demos/java-compat/packages.config
 demos/java-compat/**/build
+
+# Makefile Build System
+build
+generated
+.depend
