Do not depend on Ice submodule to build Freeze Java

--- a/demos/java-compat/gradle/freeze.gradle
+++ b/demos/java-compat/gradle/freeze.gradle
@@ -3,43 +3,77 @@ apply from: "$rootProject.projectDir/gradle/db.gradle"
 
 ext.iceHome = iceHome ? iceHome : System.env.ICE_HOME
 ext.freezeHome = freezeHome ? freezeHome : System.env.FREEZE_HOME
-if(isWindows)
-{
+if (isWindows) {
     ext.iceHome = iceHome ? iceHome : "${rootProject.projectDir}/packages/zeroc.ice.v140.${iceVersion}"
     ext.freezeHome = freezeHome ? freezeHome : "${rootProject.projectDir}/packages/zeroc.freeze.v140.${iceVersion}"
 
-    if(!new File("${iceHome}\\tools\\slice2java.exe").exists() &&
-       !new File("${iceHome}\\bin\\slice2java.exe").exists() &&
-       !new File("${iceHome}\\cpp\\bin\\${cppPlatform}\\${cppConfiguration}\\slice2java.exe").exists())
-    {
+    if (!new File("${iceHome}\\tools\\slice2java.exe").exists() &&
+        !new File("${iceHome}\\bin\\slice2java.exe").exists() &&
+        !new File("${iceHome}\\cpp\\bin\\${cppPlatform}\\${cppConfiguration}\\slice2java.exe").exists()) {
         throw new GradleException("Unable to locate slice2java compiler in ${iceHome}")
     }
 
-    if(!new File("${freezeHome}\\tools\\slice2freezej.exe").exists() &&
-       !new File("${freezeHome}\\cpp\\bin\\${cppPlatform}\\${cppConfiguration}\\slice2freezej.exe").exists())
-    {
+    if (!new File("${freezeHome}\\tools\\slice2freezej.exe").exists() &&
+        !new File("${freezeHome}\\cpp\\bin\\${cppPlatform}\\${cppConfiguration}\\slice2freezej.exe").exists()){
         throw new GradleException("Unable to locate slice2freezej compiler in ${freezeHome}")
     }
-}
-else
-{
+} else {
     ext.iceHome = iceHome ? iceHome : isMacOS ? "/usr/local" : "/usr"
     ext.freezeHome = freezeHome ? freezeHome : isMacOS ? "/usr/local" : "/usr"
 
-    if(!new File("${iceHome}/bin/slice2java").exists() &&
-       !new File("${iceHome}/cpp/bin/slice2java").exists())
-    {
+    if (!new File("${iceHome}/bin/slice2java").exists() &&
+        !new File("${iceHome}/cpp/bin/slice2java").exists()) {
         throw new GradleException("Unable to locate slice2java compiler in ${iceHome}")
     }
 
-    if(!new File("${freezeHome}/bin/slice2freezej").exists() &&
-       !new File("${freezeHome}/cpp/bin/slice2freezej").exists())
-    {
+    if (!new File("${freezeHome}/bin/slice2freezej").exists() &&
+        !new File("${freezeHome}/cpp/bin/slice2freezej").exists()) {
         throw new GradleException("Unable to locate slice2freezej compiler in ${freezeHome}")
     }
 }
 
-apply from: "${rootProject.projectDir}/../../ice/java/gradle/ice.gradle"
+buildscript {
+    //
+    // If iceBuilderHome is set add its lib directory it to the local maven repositories
+    // so we can build using a local plugin version
+    //
+    if (iceBuilderHome) {
+        def builder  = new File([iceBuilderHome, "build", "libs"].join(File.separator))
+        if (builder.exists()) {
+            repositories {
+                flatDir dirs: "file://${builder.getCanonicalPath()}"
+            }
+        }
+    }
+
+    if (new File("/usr/share/maven-repo").exists()) {
+        repositories {
+            maven {
+                url "file:///usr/share/maven-repo"
+            }
+        }
+    }
+
+    repositories {
+        mavenCentral()
+
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath group: "${iceBuilderClassPath}", name: 'slice', version: "${iceBuilderVersion}"
+    }
+}
+
+//
+// We do not use the new gradle Plugin DSL because on debian we want to use the plug-in
+// from gradle-ice-builder-plugin package and this is not possible when using gradle 3.2
+// included in stretch and the Plugin DSL.
+//
+if (!project.plugins.findPlugin(com.zeroc.gradle.icebuilder.slice.SlicePlugin)) {
+    project.apply(plugin: com.zeroc.gradle.icebuilder.slice.SlicePlugin)
+}
 
 slice {
     freezeHome = this.freezeHome
