--- a/demos/java-compat/build.gradle
+++ b/demos/java-compat/build.gradle
@@ -28,8 +28,11 @@ if(isWindows) {
         def xml = new groovy.xml.MarkupBuilder(writer)
         def packages = [["id": "berkeley.db.java7", "version": "5.3.28.1"]]
 
-        if(!System.env.ICE_HOME) {
-            packages.add(["id": "zeroc.ice.v140", "version": "${iceVersion}"])
+        if(!System.env.ICE_HOME || !System.env.FREEZE_HOME) {
+            packages.add(["id": "zeroc.freeze.v140", "version": "${iceVersion}"])
+        }
+
+        if(!System.env.FREEZE_HOME) {
             packages.add(["id": "zeroc.freeze.v140", "version": "${iceVersion}"])
         }
 
