--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -13,8 +13,8 @@ iceVersion = 3.7.0
 // Select an installation base directory. The directory will be created
 // if it does not exist. If this property is not set the default will be
 // used. Default values are:
-//   - Windows: %SystemDrive%\Ice-${prefixVersion}
-//   - Non Windows /opt/Ice-${prefixVersion}
+//   - Windows: %SystemDrive%\Freeze-${prefixVersion}
+//   - Non Windows /opt/Freeze-${prefixVersion}
 //
 prefix =
 
