--- a/java/src/Freeze/build.gradle
+++ b/java/src/Freeze/build.gradle
@@ -43,4 +43,4 @@ dependencies {
     compile files(dbJar)
 }
 
-apply from: "$rootProject.projectDir/../ice/java/gradle/library.gradle"
+apply from: "${rootProject.projectDir}/gradle/library.gradle"
