--- a/demos/java-compat/gradle/db.gradle
+++ b/demos/java-compat/gradle/db.gradle
@@ -8,7 +8,7 @@ if (isWindows) {
 } else {
     subdirs = [
         "/usr/local/opt/ice/libexec/lib/",
-        "/usr/local/opt/berkeley-db53/lib/",
+        "/usr/local/opt/berkeley-db@5.3/lib/",
         "/usr/local/lib/",
         "/usr/share/java/",
         "/opt/Ice-${project.version}/lib/",
