--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,10 @@ cpp/demo/Debug
 /cpp/test/*/*/build.txt
 /csharp/test/*/*/build.txt
 
+# Eclipse
+.externalToolBuilders
+
+
 # OS X Keychain
 *.keychain
 .fl????????
