Update Freeze demos to Ice Builder 5.x

--- a/demos/cpp98/Freeze/transform/msbuild/recreate/recreate.vcxproj.filters
+++ b/demos/cpp98/Freeze/transform/msbuild/recreate/recreate.vcxproj.filters
@@ -117,8 +117,8 @@
     <CustomBuild Include="dummy.freeze" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\NewContactData.ice">
+    <SliceCompile Include="..\..\NewContactData.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
