--- a/demos/cpp98/Freeze/bench/msbuild/client/client.vcxproj.filters
+++ b/demos/cpp98/Freeze/bench/msbuild/client/client.vcxproj.filters
@@ -114,11 +114,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\Test.ice">
-      <Filter>Slice Files</Filter>
-    </IceBuilder>
+    <CustomBuild Include="dummy.freeze" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="dummy.freeze" />
+    <SliceCompile Include="..\..\Test.ice">
+      <Filter>Slice Files</Filter>
+    </SliceCompile>
   </ItemGroup>
 </Project>
