--- a/demos/cpp98/Freeze/casino/msbuild/server/server.vcxproj
+++ b/demos/cpp98/Freeze/casino/msbuild/server/server.vcxproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.props" Condition="Exists('..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.props')" />
   <Import Project="..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.props" Condition="Exists('..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.props') and '$(FREEZE_HOME)' == ''" />
   <Import Project="..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.props" Condition="Exists('..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.props') and '$(ICE_HOME)' == ''" />
   <Import Project="..\..\..\..\packages\zeroc.freeze.v120.3.7.0\build\native\zeroc.freeze.v120.props" Condition="Exists('..\..\..\..\packages\zeroc.freeze.v120.3.7.0\build\native\zeroc.freeze.v120.props') and '$(FREEZE_HOME)' == ''" />
@@ -25,9 +26,6 @@
   <PropertyGroup Label="Globals">
     <ProjectName>server</ProjectName>
     <ProjectGuid>{87CECE87-62E9-4D10-B1A4-D36191ADFC8A}</ProjectGuid>
-    <IceBuilderInstallDir>$([MSBuild]::GetRegistryValue('HKEY_CURRENT_USER\SOFTWARE\ZeroC\IceBuilder', 'InstallDir.$(VisualStudioVersion)'))</IceBuilderInstallDir>
-    <IceBuilderCppProps>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.props</IceBuilderCppProps>
-    <IceBuilderCppTargets>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.targets</IceBuilderCppTargets>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup>
@@ -37,15 +35,23 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <Import Project="$(MSBuildThisProjectDirectory)..\..\..\..\msbuild\common.props" />
-  <Import Project="$(IceBuilderCppProps)" Condition="Exists('$(IceBuilderCppProps)')" />
   <PropertyGroup>
     <OutDir>..\..\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
+  <PropertyGroup Label="IceBuilder">
+    <IceCppMapping>cpp98</IceCppMapping>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(Platform)\$(Configuration);..\..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Label="IceBuilder">
+    <SliceCompile>
+      <OutputDir>$(Platform)\$(Configuration)</OutputDir>
+      <IncludeDirectories>..\..;%(IncludeDirectories)</IncludeDirectories>
+    </SliceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\BankI.cpp" />
@@ -57,41 +63,49 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="Win32\Debug\CasinoStore.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="Win32\Release\Casino.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="Win32\Release\CasinoStore.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="x64\Debug\Casino.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="x64\Debug\CasinoStore.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="x64\Release\Casino.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClCompile>
     <ClCompile Include="x64\Release\CasinoStore.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClCompile>
     <ClInclude Include="..\..\BankI.h" />
     <ClInclude Include="..\..\BetI.h" />
@@ -101,60 +115,57 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="Win32\Debug\CasinoStore.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="Win32\Release\Casino.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="Win32\Release\CasinoStore.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="x64\Debug\Casino.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="x64\Debug\CasinoStore.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="x64\Release\Casino.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\Casino.ice</SliceCompileSource>
     </ClInclude>
     <ClInclude Include="x64\Release\CasinoStore.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <SliceCompileSource>..\..\CasinoStore.ice</SliceCompileSource>
     </ClInclude>
     <None Include="..\..\config.server" />
     <None Include="..\..\README.md" />
     <None Include="packages.config" />
-    <IceBuilder Include="..\..\Casino.ice" />
-    <IceBuilder Include="..\..\CasinoStore.ice" />
+    <SliceCompile Include="..\..\Casino.ice" />
+    <SliceCompile Include="..\..\CasinoStore.ice" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <PropertyGroup Label="IceBuilder">
-    <IceBuilderOutputDir>$(Platform)\$(Configuration)</IceBuilderOutputDir>
-    <IceBuilderIncludeDirectories>..\..;$(IceBuilderIncludeDirectories)</IceBuilderIncludeDirectories>
-  </PropertyGroup>
-  <Import Project="$(IceBuilderCppTargets)" Condition="Exists('$(IceBuilderCppTargets)')" />
-  <Target Name="EnsureIceBuilderImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project requires the Ice Builder for Visual Studio extension. Use "Tools &amp;gt; Extensions and Updates" to install it. For more information, see https://visualstudiogallery.msdn.microsoft.com/1a64e701-63f2-4740-8004-290e6c682ce0.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(IceBuilderCppProps)')" Text="$(ErrorText)" />
-  </Target>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
@@ -167,9 +178,12 @@
     <Error Condition="!Exists('..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.targets') and '$(ICE_HOME)' == ''" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.targets'))" />
     <Error Condition="!Exists('..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.props') and '$(FREEZE_HOME)' == ''" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.props'))" />
     <Error Condition="!Exists('..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.targets') and '$(FREEZE_HOME)' == ''" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.props'))" />
+    <Error Condition="!Exists('..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.targets'))" />
   </Target>
   <Import Project="..\..\..\..\packages\zeroc.ice.v120.3.7.0\build\native\zeroc.ice.v120.targets" Condition="Exists('..\..\..\..\packages\zeroc.ice.v120.3.7.0\build\native\zeroc.ice.v120.targets') and '$(ICE_HOME)' == ''" />
   <Import Project="..\..\..\..\packages\zeroc.freeze.v120.3.7.0\build\native\zeroc.freeze.v120.targets" Condition="Exists('..\..\..\..\packages\zeroc.freeze.v120.3.7.0\build\native\zeroc.freeze.v120.targets') and '$(FREEZE_HOME)' == ''" />
   <Import Project="..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.targets" Condition="Exists('..\..\..\..\packages\zeroc.ice.v140.3.7.0\build\native\zeroc.ice.v140.targets') and '$(ICE_HOME)' == ''" />
   <Import Project="..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.targets" Condition="Exists('..\..\..\..\packages\zeroc.freeze.v140.3.7.0\build\native\zeroc.freeze.v140.targets') and '$(FREEZE_HOME)' == ''" />
+  <Import Project="..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.targets" Condition="Exists('..\..\..\..\packages\zeroc.icebuilder.msbuild.5.0.1\build\zeroc.icebuilder.msbuild.targets')" />
 </Project>
