--- a/cpp/msbuild/zeroc.freeze.v120.nuspec
+++ b/cpp/msbuild/zeroc.freeze.v120.nuspec
@@ -13,7 +13,7 @@
     <releaseNotes>https://doc.zeroc.com/display/Rel/Freeze+3.7.0+Release+Notes</releaseNotes>
     <tags>freeze ice native rpc v120 zeroc</tags>
     <dependencies>
-      <dependency id="zeroc.ice.v120" version="[3.7.1]"/>
+      <dependency id="zeroc.ice.v120" version="[3.7.0,3.8.0)"/>
     </dependencies>
   </metadata>
 </package>
