--- a/cpp/msbuild/freeze.cpp.props
+++ b/cpp/msbuild/freeze.cpp.props
@@ -26,7 +26,7 @@
                                           %(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
         </ClCompile>
         <Link>
-            <AdditionalLibraryDirectories>$(FreezeSrcRootDir)\lib\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+            <AdditionalLibraryDirectories>$(FreezeSrcRootDir)\lib\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
         </Link>
     </ItemDefinitionGroup>
 
