--- a/cpp/src/FreezeScript/msbuild/transformdb/packages.config
+++ b/cpp/src/FreezeScript/msbuild/transformdb/packages.config
@@ -4,4 +4,5 @@
   <package id="berkeley.db.v140" version="5.3.28.3" targetFramework="native" />
   <package id="mcpp.v120" version="2.7.2.12" targetFramework="native" />
   <package id="mcpp.v140" version="2.7.2.12" targetFramework="native" />
+  <package id="zeroc.icebuilder.msbuild" version="5.0.3" targetFramework="native" />
 </packages>
