--- a/cpp/test/Freeze/complex/msbuild/client/client.vcxproj.filters
+++ b/cpp/test/Freeze/complex/msbuild/client/client.vcxproj.filters
@@ -49,23 +49,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\Complex.ice">
-      <Filter>Slice Files</Filter>
-    </IceBuilder>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Win32\Debug\Complex.cpp">
-      <Filter>Source Files\Win32\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="x64\Debug\Complex.cpp">
-      <Filter>Source Files\x64\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Win32\Release\Complex.cpp">
-      <Filter>Source Files\Win32\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="x64\Release\Complex.cpp">
-      <Filter>Source Files\x64\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -90,6 +73,7 @@
     <ClCompile Include="x64\Release\ComplexDict.cpp">
       <Filter>Source Files\x64\Release</Filter>
     </ClCompile>
+    <ClCompile Include="generated\Complex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Grammar.h">
@@ -104,18 +88,6 @@
     <ClInclude Include="..\..\NodeI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Win32\Debug\Complex.h">
-      <Filter>Header Files\Win32\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="x64\Debug\Complex.h">
-      <Filter>Header Files\x64\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="Win32\Release\Complex.h">
-      <Filter>Header Files\Win32\Release</Filter>
-    </ClInclude>
-    <ClInclude Include="x64\Release\Complex.h">
-      <Filter>Header Files\x64\Release</Filter>
-    </ClInclude>
     <ClInclude Include="x64\Debug\ComplexDict.h">
       <Filter>Header Files\x64\Debug</Filter>
     </ClInclude>
@@ -125,6 +97,7 @@
     <ClInclude Include="x64\Release\ComplexDict.h">
       <Filter>Header Files\x64\Release</Filter>
     </ClInclude>
+    <ClInclude Include="generated\Complex.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Scanner.l" />
@@ -135,5 +108,10 @@
     <CustomBuild Include="dummy.txt">
       <Filter>Slice Files</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <SliceCompile Include="..\..\Complex.ice">
+      <Filter>Slice Files</Filter>
+    </SliceCompile>
   </ItemGroup>
 </Project>
