--- a/cpp/test/FreezeScript/dbmap/msbuild/makedb/makedb.vcxproj.filters
+++ b/cpp/test/FreezeScript/dbmap/msbuild/makedb/makedb.vcxproj.filters
@@ -67,18 +67,7 @@
     <ClCompile Include="x64\Debug\IntSMap.cpp">
       <Filter>Source Files\x64\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="Win32\Debug\TestOld.cpp">
-      <Filter>Source Files\Win32\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="x64\Debug\TestOld.cpp">
-      <Filter>Source Files\x64\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Win32\Release\TestOld.cpp">
-      <Filter>Source Files\Win32\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="x64\Release\TestOld.cpp">
-      <Filter>Source Files\x64\Release</Filter>
-    </ClCompile>
+    <ClCompile Include="generated\TestOld.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="x64\Release\IntSMap.h">
@@ -93,25 +82,14 @@
     <ClInclude Include="x64\Debug\IntSMap.h">
       <Filter>Header Files\x64\Debug</Filter>
     </ClInclude>
-    <ClInclude Include="Win32\Debug\TestOld.h">
-      <Filter>Header Files\Win32\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="x64\Debug\TestOld.h">
-      <Filter>Header Files\x64\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="Win32\Release\TestOld.h">
-      <Filter>Header Files\Win32\Release</Filter>
-    </ClInclude>
-    <ClInclude Include="x64\Release\TestOld.h">
-      <Filter>Header Files\x64\Release</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <IceBuilder Include="..\..\TestOld.ice">
-      <Filter>Slice Files</Filter>
-    </IceBuilder>
+    <ClInclude Include="generated\TestOld.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <SliceCompile Include="..\..\TestOld.ice">
+      <Filter>Slice Files</Filter>
+    </SliceCompile>
   </ItemGroup>
 </Project>
