--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -60,6 +60,12 @@ iceBuilderClassPath = gradle.plugin.com.zeroc.gradle.ice-builder
 iceBuilderHome =
 
 //
+// If the dev repository is set it will be used as the first repository when
+// resolving dependencies
+//
+devRepo =
+
+//
 // Windows specific options
 //
 
