--- a/demos/cpp98/Freeze/phonebook/msbuild/client/client.vcxproj.filters
+++ b/demos/cpp98/Freeze/phonebook/msbuild/client/client.vcxproj.filters
@@ -109,8 +109,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\PhoneBook.ice">
+    <SliceCompile Include="..\..\PhoneBook.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
