--- a/demos/cpp98/Manual/evictorFilesystem/msbuild/server/server.vcxproj.filters
+++ b/demos/cpp98/Manual/evictorFilesystem/msbuild/server/server.vcxproj.filters
@@ -121,11 +121,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\Filesystem.ice">
+    <SliceCompile Include="..\..\Filesystem.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
-    <IceBuilder Include="..\..\PersistentFilesystem.ice">
+    </SliceCompile>
+    <SliceCompile Include="..\..\PersistentFilesystem.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
