--- a/demos/cpp98/Freeze/casino/msbuild/client/client.vcxproj.filters
+++ b/demos/cpp98/Freeze/casino/msbuild/client/client.vcxproj.filters
@@ -91,8 +91,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\Casino.ice">
+    <SliceCompile Include="..\..\Casino.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
