--- a/demos/cpp98/Manual/mapFilesystem/msbuild/client/client.vcxproj.filters
+++ b/demos/cpp98/Manual/mapFilesystem/msbuild/client/client.vcxproj.filters
@@ -106,8 +106,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\Filesystem.ice">
+    <SliceCompile Include="..\..\Filesystem.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
