--- a/demos/cpp98/Manual/mapFilesystem/msbuild/server/server.vcxproj.filters
+++ b/demos/cpp98/Manual/mapFilesystem/msbuild/server/server.vcxproj.filters
@@ -172,11 +172,11 @@
     <CustomBuild Include="dummy.freeze" />
   </ItemGroup>
   <ItemGroup>
-    <IceBuilder Include="..\..\FilesystemDB.ice">
+    <SliceCompile Include="..\..\FilesystemDB.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
-    <IceBuilder Include="..\..\Filesystem.ice">
+    </SliceCompile>
+    <SliceCompile Include="..\..\Filesystem.ice">
       <Filter>Slice Files</Filter>
-    </IceBuilder>
+    </SliceCompile>
   </ItemGroup>
 </Project>
