--- a/demos/java-compat/Freeze/casino/build.gradle
+++ b/demos/java-compat/Freeze/casino/build.gradle
@@ -21,14 +21,10 @@ sourceSets {
 }
 
 dependencies {
-    compile "com.zeroc:ice-compat:${iceVersion}"
-    compile "com.zeroc:freeze-compat:${iceVersion}"
-    compile files(dbJar)
-    runtime "org.apache.commons:commons-compress:1.14"
-}
-
-dependencies {
-    compile files(dbJar)
+    implementation "com.zeroc:ice-compat:${iceVersion}"
+    implementation "com.zeroc:freeze-compat:${iceVersion}"
+    implementation files(dbJar)
+    runtimeOnly "org.apache.commons:commons-compress:1.14"
 }
 
 clean {
