--- a/demos/java-compat/gradle.properties
+++ b/demos/java-compat/gradle.properties
@@ -5,13 +5,13 @@
 // **********************************************************************
 
 //
-// Version used in JAR files
+// The Ice/Freeze version we use.
 //
-iceVersion = 3.7.1
+iceVersion = 3.7.2
 
 //
 // Set to true if you want to add Class-Path entries to Freeze JAR files
-// when installing the JARs. That is mostly usefull when building JAR
+// when installing the JARs. That is mostly useful when building JAR
 // files to be used in system packages.
 //
 jarsClassPath = false
@@ -80,7 +80,3 @@ cppConfiguration =
 org.gradle.daemon = true
 org.gradle.parallel = true
 
-//
-// Package build properties
-//
-DESTDIR =
