--- a/demos/java-compat/gradle/freeze.gradle
+++ b/demos/java-compat/gradle/freeze.gradle
@@ -76,8 +76,8 @@ if (!project.plugins.findPlugin(com.zeroc.gradle.icebuilder.slice.SlicePlugin)) 
 }
 
 slice {
-    freezeHome = this.freezeHome
-    iceHome = this.iceHome
+    freezeHome = project.freezeHome
+    iceHome = project.iceHome
     compat = true
 }
 
@@ -93,7 +93,7 @@ ext.demoJar = { name ->
     }
     jarTask.manifest {
         attributes("Main-Class": name.capitalize())
-        attributes("Class-Path": configurations.runtime.resolve().collect { it.toURI() }.join(' '))
+        attributes("Class-Path": configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' '))
     }
     artifacts {
         archives jarTask
