--- a/java/gradle/library.gradle
+++ b/java/gradle/library.gradle
@@ -128,7 +128,7 @@ uploadArchives {
 
 jar {
     manifest {
-        attributes("Class-Path": configurations.runtime.resolve().collect{ "${it.name}" }.join(' '))
+        attributes("Class-Path": configurations.runtimeClasspath.resolve().collect{ "${it.name}" }.join(' '))
     }
 }
 
